--- a/src/js/lang/de.po
+++ b/src/js/lang/de.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ToureNPlaner 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-12-11 18:25+0100\n"
-"PO-Revision-Date: 2011-12-11 18:26+0100\n"
+"POT-Creation-Date: 2011-12-11 18:46+0100\n"
+"PO-Revision-Date: 2011-12-11 18:48+0100\n"
 "Last-Translator: Philipp Gildein <philipp@gildein.com>\n"
 "Language-Team: \n"
 "Language: \n"
@@ -58,7 +58,59 @@ msgstr "Endmarkierung hinzufügen"
 msgid "Loading server informations"
 msgstr "Lade Serverinformationen"
 
-#: templates.js:11
+#: templates.js:5
+msgid "Registration"
+msgstr "Registrierung"
+
+#: templates.js:9
+#: templates.js:12
+#: views.js:413
+#: views.js:522
+#: views.js:591
+msgid "Error!"
+msgstr "Fehler!"
+
+#: templates.js:9
+msgid "Please fill out all fields."
+msgstr "Bitte füllen Sie alle Felder aus."
+
+#: templates.js:12
+msgid "There were errors in the form."
+msgstr "Es traten Fehler im Formular auf."
+
+#: templates.js:16
+msgid "First name"
+msgstr "Vorname"
+
+#: templates.js:22
+msgid "Last name"
+msgstr "Nachname"
+
+#: templates.js:28
+msgid "Address"
+msgstr "Adresse"
+
+#: templates.js:34
+msgid "Email"
+msgstr "Email"
+
+#: templates.js:40
+msgid "Password"
+msgstr "Passwort"
+
+#: templates.js:46
+msgid "Repeat Password"
+msgstr "Passwort wiederholen"
+
+#: templates.js:54
+msgid "Cancel"
+msgstr "Abbrechen"
+
+#: templates.js:55
+msgid "Register"
+msgstr "Registrieren"
+
+#: templates.js:66
 msgid "Close"
 msgstr "Schließen"
 
@@ -114,25 +166,19 @@ msgstr "Start"
 msgid "Target"
 msgstr "Ziel"
 
-#: views.js:413
-#: views.js:519
-#: views.js:589
-msgid "Error!"
-msgstr "Fehler!"
-
 #: views.js:452
 msgid "Logging in"
 msgstr "Anmeldung läuft"
 
-#: views.js:565
+#: views.js:567
 msgid "Sending data"
 msgstr "Daten werden gesendet"
 
-#: views.js:581
+#: views.js:583
 msgid "Registration successful"
 msgstr "Registrierung erfolgreich"
 
-#: views.js:582
+#: views.js:584
 msgid "The registration was successful. Please wait until an administrator activates your account."
 msgstr "Die Registrierung war erfolgreich. Bitte warten Sie bis ein Administrator Ihren Account aktiviert."
 
