--- a/src/js/lang/tourenplaner.pot
+++ b/src/js/lang/tourenplaner.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-01-31 15:05+0100\n"
+"POT-Creation-Date: 2012-01-31 15:40+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,7 +58,7 @@ msgid "Add Endmarker"
 msgstr ""
 
 #: router.js:26
-msgid "Loading server informations"
+msgid "Loading server information"
 msgstr ""
 
 #: router.js:67 templates.js:109 templates.js:112 templates.js:140
