--- a/src/js/lang/tourenplaner.pot
+++ b/src/js/lang/tourenplaner.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-01-31 15:40+0100\n"
+"POT-Creation-Date: 2012-01-31 15:42+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -75,7 +75,7 @@ msgid ""
 msgstr ""
 
 #: router.js:102
-msgid "Loading user informations"
+msgid "Loading user information"
 msgstr ""
 
 #: templates.js:7
