--- a/js/lang/de.po
+++ b/js/lang/de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ToureNPlaner 0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-04-17 11:53+0200\n"
-"PO-Revision-Date: 2012-04-17 11:58+0100\n"
+"PO-Revision-Date: 2012-04-17 14:35+0100\n"
 "Last-Translator: Philipp Gildein <philipp@gildein.com>\n"
 "Language-Team: \n"
 "Language: \n"
@@ -205,7 +205,7 @@ msgstr "Breitengrad"
 
 #: templates.js:68
 msgid "Lat"
-msgstr "Höhengrad"
+msgstr "Längengrad"
 
 #: templates.js:85
 msgid "Apply"
